samples/_failures_safe/1761072428_2aa719_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6913a69.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_a6913a69.c:138:20: error: missing terminating " character
  138 |             printf("[
      |                    ^~
./samples/SAFE/__tmp_a6913a69.c:138:13: error: expected expression at end of input
  138 |             printf("[
      |             ^~~~~~
./samples/SAFE/__tmp_a6913a69.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6913a69.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6913a69.c:138:13: error: expected declaration or statement at end of input
